--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,12 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.0",
+    "@mui/material": "^5.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-jss": "^10.9.2",
     "react-router-dom": "^6.4.5",
     "storage-encryption": "^1.0.16"
   },
